2005-07-24  Andras Varga

	* cdispstr.h: added setTagArg() method for numeric (long) argument as 
	well. (Just converts it to string and calls the other setTagArg()).

2005-07-23  Andras Varga

	* cwatch.h: WATCH() implementation changed: now anything can be watched 
	that has operator<<. If it also has operator>> and it gets watched via
	WATCH_RW(), it can also be modified from the GUI. Objects and pointers 
	to objects can also be watched with WATCH_OBJ() and WATCH_PTR().

	* added cstlwatch.h: macros WATCH_VECTOR(), WATCH_PTRVECTOR, etc

2005-06-25  Andras Varga

	* cpar.h: added default value to type parameter of setFromText().

2005-04-28  Andras Varga

	* cmessage.h: added byteLength(), setByteLength(), addByteLength()
	convenience functions. They just invoke the length(), setLength(),
	addLength() methods.

2005-04-21  Andras Varga

	* util.h: added simtimeToStrShort().

2005-04-04  Andras Varga

	* cenvir.h: fixed compilation bug in gcc3.4. For some obscure reason,
	in template classes gcc 3.4 seems to insist on fully qualifying calls
	to methods from the base class. This does not appear to make much
	sense, and indeed was not a problem with gcc<3.4, vc6.0 or vc7.1,
	and even gcc3.4 is willing to compile the old code if run with
	the -fpermissive option. Oh well...

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-22  Andras Varga

	* cenvir.h: cEnvir::getParameter() return type changed from
	const char * to std::string. This was needed because if the
	parameter value contains the xmldoc() function, getParameter()
	will modify the file name in it to make it relative to the
	position of the ini file the setting was read from.

2005-03-18  Andras Varga

	* cconfig.h: added getBaseDirectoryFor() and getLocation() functions
	to cConfiguration

	* added cstrtokenizer.h, which contains cStringTokenizer

2005-03-17  Andras Varga

	* cscheduler.h: added method executionResumed() to cScheduler and
	cRealtimeScheduler
